# som_comparativa_factures

./: .gitignore  README.md  compose.yml
.github/workflows/: backend-tests.yml
assets/: CA_PLANTILLA_Domèstic_Simulació_Factura_Som Energia.docx
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  manage_templates.py  pyproject.toml
backend/app/: __init__.py  config.py  routes.py
backend/app/services/: calculator.py  reporting.py
backend/app/templates/reports/: comparison_report.html
backend/config/: pricing.json
backend/config/pdf_templates/comparison/: published.json
backend/config/pdf_templates/comparison/v1/: README.md
backend/config/pdf_templates/comparison/versions/v1/: README.md  assets.yaml  content.yaml  theme.yaml
backend/config/pdf_templates/comparison/versions/v2/: README.md  assets.yaml  content.yaml  theme.yaml
backend/tests/: conftest.py  test_compare_api.py  test_template_publication.py  test_template_publication_api.py
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
scripts/: publish-images.sh  redeploy-portainer.py
