[tool.poetry]
name = "webservice-factura-backend"
version = "0.1.0"
description = "Flask backend for invoice comparison and PDF generation"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.0.3"
flask-cors = "4.0.1"
weasyprint = "62.3"
pydyf = "0.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
